--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ astropy = "^5.2.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 
+[tool.pytest.ini_options]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api" 
