--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ astropy = "^5.2.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+sgp4 = "^2.24"
 
 [tool.pytest.ini_options]
 markers = [
